<resources>
    <string name="app_name">rafif-atom</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="subtitle_login">Please enter your account here</string>
    <string name="hint_email">Email or phone number</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="btn_login">Login</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="btn_google">Google</string>
    <string name="dont_have_account">Don\'t have any account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_title">Welcome</string>
    <string name="welcome_subtitle">Let\'s join our community\nto cook better food!</string>
    <string name="btn_get_started">Go Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>