<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Pertemuan3.WelcomeActivity">

    <ImageView
        android:id="@+id/imgMain"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="100dp"
        android:elevation="12dp"
        android:scaleType="fitCenter"
        android:src="@drawable/done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/textGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="40dp"
        app:layout_constraintTop_toBottomOf="@+id/imgMain">

        <TextView
            android:id="@+id/tvWelcomeTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/welcome_title"
            android:textColor="@color/text_primary"
            android:textSize="32sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvWelcomeDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/poppins_regular"
            android:gravity="center"
            android:text="@string/welcome_subtitle"
            android:textColor="@color/text_secondary"
            android:textSize="16sp"
            app:lineHeight="24sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btnGetStarted"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="40dp"
        android:layout_marginBottom="50dp"
        android:backgroundTint="@color/button_green"
        android:fontFamily="@font/poppins_bold"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btn_get_started"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:cornerRadius="30dp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>